# bain-technical-assessment-may-2025

./: README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  startup.py
backend/app/clients/: yelp.py
backend/app/dependencies/: openai_client.py
backend/app/models/: llm.py  restaurant.py
backend/app/services/: recommender.py  yelp_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: root.tsx
frontend/app/components/: restaurant-card.tsx
frontend/app/components/layout/: base-layout.tsx
frontend/app/components/ui/: badge.tsx  button.tsx  multi-select.tsx  popover.tsx  search-bar.tsx
frontend/app/contexts/: search-status-context.tsx
frontend/app/hooks/: useClearQueryOnReload.ts
frontend/app/lib/: api-fetch.ts  types.ts
frontend/app/routes/: home.tsx
infra/: docker-compose.yml
