[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Armandoraf",email = "armandorafael2057@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "openai (>=1.82.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "aiocache (>=0.12.3,<0.13.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.10"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E203"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
